--- a/main.css
+++ b/main.css
@@ -6,9 +6,10 @@ nav {
   font-size: 2vmin;
 }
 
-nav > h1 {
+nav > a > #signature {
   display: inline;
   padding: 2vw;
+  height: 5vw;
 }
 
 nav > #navLinks {
@@ -26,7 +27,7 @@ nav > #navLinks > a:hover {
   text-decoration: underline;
 }
 
-/* 
+/* ############### START OF CSS3 SLIDESHOW ############### 
  *
  * https://tympanus.net/codrops/2012/01/02/fullscreen-background-image-slideshow-with-css3/ 
  *
@@ -89,10 +90,10 @@ nav > #navLinks > a:hover {
     line-height: 200px; 
 }
 .cb-slideshow li:nth-child(1) span { 
-    background-image: url(./gallery/illustrations/shrubs_w_feet_1.jpg) 
+    background-image: url(./images/graphics/PS/dive_training.png) 
 }
 .cb-slideshow li:nth-child(2) span { 
-    background-image: url(./gallery/illustrations/shrubs_w_feet_2.jpg);
+    background-image: url(./images/graphics/PS/launch_space.png);
     -webkit-animation-delay: 6s;
     -moz-animation-delay: 6s;
     -o-animation-delay: 6s;
@@ -100,7 +101,7 @@ nav > #navLinks > a:hover {
     animation-delay: 6s; 
 }
 .cb-slideshow li:nth-child(3) span { 
-    background-image: url(./gallery/illustrations/shrubs_w_feet_3.jpg);
+    background-image: url(./images/graphics/PS/roadmap.png);
     -webkit-animation-delay: 12s;
     -moz-animation-delay: 12s;
     -o-animation-delay: 12s;
@@ -108,7 +109,7 @@ nav > #navLinks > a:hover {
     animation-delay: 12s; 
 }
 .cb-slideshow li:nth-child(4) span { 
-    background-image: url(./gallery/illustrations/miss-muffet-spider.jpg);
+    background-image: url(./images/graphics/PS/dive_training.png);
     -webkit-animation-delay: 18s;
     -moz-animation-delay: 18s;
     -o-animation-delay: 18s;
@@ -116,7 +117,7 @@ nav > #navLinks > a:hover {
     animation-delay: 18s; 
 }
 .cb-slideshow li:nth-child(5) span { 
-    background-image: url(./gallery/paintings/doll_sit.jpg);
+    background-image: url(./images/graphics/PS/launch_space.png);
     -webkit-animation-delay: 24s;
     -moz-animation-delay: 24s;
     -o-animation-delay: 24s;
@@ -124,7 +125,7 @@ nav > #navLinks > a:hover {
     animation-delay: 24s; 
 }
 .cb-slideshow li:nth-child(6) span { 
-    background-image: url(./gallery//paintings/doll_legs.jpg);
+    background-image: url(./images/graphics/PS/roadmap.png);
     -webkit-animation-delay: 30s;
     -moz-animation-delay: 30s;
     -o-animation-delay: 30s;
@@ -260,3 +261,9 @@ nav > #navLinks > a:hover {
 @media screen and (max-width: 600px) { 
     .cb-slideshow li div h3 { font-size: 80px }
 }
+
+/*  
+ *
+ * ############### END OF CSS3 SLIDESHOW ###############
+ *
+ */
