--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ nav {
 nav > a > #signature {
   display: inline;
   padding: 2vw;
-  height: 5vw;
+  height: 5em;
 }
 
 nav > #navLinks {
@@ -257,6 +257,9 @@ nav > #navLinks > a:hover {
 @media screen and (max-width: 1140px) { 
     .cb-slideshow li div h3 { font-size: 140px }
     nav {font-size: 5vmin; }
+    nav > a > #signature {
+        height: 3em;
+    }
 }
 @media screen and (max-width: 600px) { 
     .cb-slideshow li div h3 { font-size: 80px }
