--- a/contact.css
+++ b/contact.css
@@ -19,6 +19,10 @@
   color: inherit;
 }
 
+#contact > #email > a > i {
+  font-size: 15vmin;  
+}
+
 #contact > #phone {
   grid-area: phone;
   place-self: center;
@@ -36,9 +40,25 @@
   text-align: center;
 }
 
+#contact > #phone > i {
+  font-size: 15vmin;  
+}
+
 #contact > #sm1 {
   grid-area: sm1;
-  place-self: center; 
+  place-self: center;
+}
+
+#contact > #sm1 > a {
+  color: inherit;
+}
+
+#contact > #sm1 > a > i {
+  font-size: 15vmin;  
+}
+
+#contact > #sm1 > a > i:hover {
+  color: #0e76a8;
 }
 
 #contact > #sm2 {
@@ -46,14 +66,56 @@
   place-self: center;
 }
 
+#contact > #sm2 > a {
+  color: inherit;
+}
+
+#contact > #sm2 > a > i:hover {
+  color: transparent;
+  background: -webkit-radial-gradient(30% 107%, circle, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+  background: -o-radial-gradient(30% 107%, circle, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+  background: -webkit-radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+#contact > #sm2 > a > i {
+  font-size: 15vmin;
+}
+
 #contact > #sm3 {
   grid-area: sm3;
   place-self: center;
 }
 
+#contact > #sm3 > a {
+  color: inherit;
+}
+
+#contact > #sm3 > a > i {
+  font-size: 15vmin;
+}
+
+#contact > #sm3 > a > i:hover {
+  color: #053eff;
+}
+
 #contact > #sm4 {
   grid-area: sm4;
   place-self: center;
+}
+
+#contact > #sm4 > a {
+  color: inherit;
+}
+
+#contact > #sm4 > a > i {
+  font-size: 15vmin;  
+}
+
+#contact > #sm4 > a > i:hover {
+  color: #ea4c89;
 }
 
 #contact {
@@ -72,6 +134,10 @@
 }
 
 @media screen and (max-width: 1140px) { 
+  #contact {
+    grid-gap: 100px;
+  }
+
   #contact > #email {
     flex-direction: column;
   }
@@ -82,6 +148,10 @@
 }
 
 @media screen and (max-width: 600px) { 
+  #contact {
+    grid-gap: 50px;
+  }
+
   #contact > #email {
     flex-direction: column;
   }
