--- a/contact.css
+++ b/contact.css
@@ -135,6 +135,7 @@
 @media screen and (max-width: 1140px) { 
   #contact {
     grid-gap: 100px;
+    margin-top: 20vh;
     margin-left: 28vw;
     margin-right: 28vw;  
     grid-template-rows: repeat(4, 1fr);
@@ -154,6 +155,7 @@
 @media screen and (max-width: 600px) { 
   #contact {
     grid-gap: 50px;
+    margin-top: 20vh;
     margin-left: 33vw;
     margin-right: 33vw;
     grid-template-rows: repeat(5, 1fr);
