--- a/main.css
+++ b/main.css
@@ -6,6 +6,15 @@ nav {
   font-size: 2vmin;
 }
 
+nav.scrolled {
+    opacity: 0;
+    transition: all 1s ease;
+}
+
+nav.scrolled.hover {
+    opacity: 1;
+}
+
 nav > a > #signature {
   display: inline;
   padding: 2vw;
