--- a/contact.css
+++ b/contact.css
@@ -118,7 +118,7 @@
 }
 
 #contact {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Montserrat', 'Rubik', sans-serif;
   margin-top: 30vh;
   margin-left: 5vw;
   margin-right: 5vw;
