--- a/work.css
+++ b/work.css
@@ -1,9 +1,9 @@
 #work {
-  font-family: 'Rubik', sans-serif;
-  margin-top: 20vh;
-  margin-left: 5vw;
-  margin-right: 5vw;
-  height: 50vh;
+  font-family: 'Montserrat', 'Rubik', sans-serif;
+  margin-top: 30vh;
+  margin-left: 15vw;
+  margin-right: 15vw;
+  margin-bottom: 30vh;
   font-size: 3vmin;
 
   display: grid;
