reorganize images, change work layout

--- a/main.css
+++ b/main.css
@@ -106,10 +106,10 @@ nav > #navLinks > a:hover {
     line-height: 200px; 
 }
 .cb-slideshow li:nth-child(1) span { 
-    background-image: url(./images/graphics/PS/dive_training.png) 
+    background-image: url(./images/PS/dive_training.png) 
 }
 .cb-slideshow li:nth-child(2) span { 
-    background-image: url(./images/graphics/PS/launch_space.png);
+    background-image: url(./images/PS/launch_space.png);
     -webkit-animation-delay: 6s;
     -moz-animation-delay: 6s;
     -o-animation-delay: 6s;
@@ -117,7 +117,7 @@ nav > #navLinks > a:hover {
     animation-delay: 6s; 
 }
 .cb-slideshow li:nth-child(3) span { 
-    background-image: url(./images/graphics/PS/roadmap.png);
+    background-image: url(./images/PS/roadmap.png);
     -webkit-animation-delay: 12s;
     -moz-animation-delay: 12s;
     -o-animation-delay: 12s;
@@ -125,7 +125,7 @@ nav > #navLinks > a:hover {
     animation-delay: 12s; 
 }
 .cb-slideshow li:nth-child(4) span { 
-    background-image: url(./images/graphics/PS/dive_training.png);
+    background-image: url(./images/PS/dive_training.png);
     -webkit-animation-delay: 18s;
     -moz-animation-delay: 18s;
     -o-animation-delay: 18s;
@@ -133,7 +133,7 @@ nav > #navLinks > a:hover {
     animation-delay: 18s; 
 }
 .cb-slideshow li:nth-child(5) span { 
-    background-image: url(./images/graphics/PS/launch_space.png);
+    background-image: url(./images/PS/launch_space.png);
     -webkit-animation-delay: 24s;
     -moz-animation-delay: 24s;
     -o-animation-delay: 24s;
@@ -141,7 +141,7 @@ nav > #navLinks > a:hover {
     animation-delay: 24s; 
 }
 .cb-slideshow li:nth-child(6) span { 
-    background-image: url(./images/graphics/PS/roadmap.png);
+    background-image: url(./images/PS/roadmap.png);
     -webkit-animation-delay: 30s;
     -moz-animation-delay: 30s;
     -o-animation-delay: 30s;
