--- a/main.css
+++ b/main.css
@@ -119,10 +119,10 @@ footer {
     line-height: 200px; 
 }
 .cb-slideshow li:nth-child(1) span { 
-    background-image: url(./images/PS/dive_training.png) 
+    background-image: url(./images/PS/full/dive_training.png) 
 }
 .cb-slideshow li:nth-child(2) span { 
-    background-image: url(./images/PS/launch_space.png);
+    background-image: url(./images/PS/full/launch_space.png);
     -webkit-animation-delay: 6s;
     -moz-animation-delay: 6s;
     -o-animation-delay: 6s;
@@ -130,7 +130,7 @@ footer {
     animation-delay: 6s; 
 }
 .cb-slideshow li:nth-child(3) span { 
-    background-image: url(./images/PS/roadmap.png);
+    background-image: url(./images/PS/full/roadmap.png);
     -webkit-animation-delay: 12s;
     -moz-animation-delay: 12s;
     -o-animation-delay: 12s;
@@ -138,7 +138,7 @@ footer {
     animation-delay: 12s; 
 }
 .cb-slideshow li:nth-child(4) span { 
-    background-image: url(./images/PS/dive_training.png);
+    background-image: url(./images/PS/full/dive_training.png);
     -webkit-animation-delay: 18s;
     -moz-animation-delay: 18s;
     -o-animation-delay: 18s;
@@ -146,7 +146,7 @@ footer {
     animation-delay: 18s; 
 }
 .cb-slideshow li:nth-child(5) span { 
-    background-image: url(./images/PS/launch_space.png);
+    background-image: url(./images/PS/full/launch_space.png);
     -webkit-animation-delay: 24s;
     -moz-animation-delay: 24s;
     -o-animation-delay: 24s;
@@ -154,7 +154,7 @@ footer {
     animation-delay: 24s; 
 }
 .cb-slideshow li:nth-child(6) span { 
-    background-image: url(./images/PS/roadmap.png);
+    background-image: url(./images/PS/full/roadmap.png);
     -webkit-animation-delay: 30s;
     -moz-animation-delay: 30s;
     -o-animation-delay: 30s;
