--- a/work/workDisplay.css
+++ b/work/workDisplay.css
@@ -1,6 +1,6 @@
 #work {
   font-family: 'Montserrat', 'Rubik', sans-serif;
-  margin-top: 30vh;
+  margin-top: 30vmin;
   margin-left: 10vw;
   margin-right: 10vw;
   margin-bottom: 30vh;
