--- a/work.css
+++ b/work.css
@@ -11,7 +11,7 @@
   grid-template-columns: repeat(5, 1fr);
   grid-template-areas:
     "wb1 wb2 ln wb4 wb5"
-    "wb3 .   ln .   .";
+    "wb3 wb3 ln .   .";
 }
 
 #wb1 {
