--- a/work/workDisplay.css
+++ b/work/workDisplay.css
@@ -1,6 +1,15 @@
+#fullDisplay > img {
+  display: block;
+  width: 70vw;
+  height: auto;
+  margin-top: 25vmin;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5vmin;
+}
+
 #work {
   font-family: 'Montserrat', 'Rubik', sans-serif;
-  margin-top: 30vmin;
   margin-left: 8vw;
   margin-right: 8vw;
   margin-bottom: 30vmin;
